initial try of hiding and showing menu button to prevent overlap on mobile

--- a/css/litewrite.css
+++ b/css/litewrite.css
@@ -66,6 +66,7 @@ footer a { display:inline; padding:0; }
 		.add-plus, .add-text { color:#000; opacity:1 !important; position:relative !important; }
 		.add-plus { top:0 !important; }
 	.menu-button { display:block; padding:14px; cursor:pointer; font-weight:bold; font-size:22px; }
+	.menu-button.hide { display:none; }
 	footer { display:none; }
 }
 
